added more functions and passing tests